test/error/enum_post_signed.sv
// pattern: unexpected signed applied to enum
module top;
    enum {
        A, B
    } signed x;
endmodule
